--- a/Day_2/index.html
+++ b/Day_2/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>7 Days of Code - Day 2</h1>
 
-    <!-- Aqui chamamos o JS externo -->
+    <!-- chamando o JS externo -->
     <script src="script.js"></script>
 </body>
 </html>
